2005-08-18 21:02 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m: attachObject:toParent: added code to insert
	the content view into the nametable and the parent->child 
	connections.
	* GormCore/GormViewWithContentViewEditor.m: in the group* methods added
	code to "reparent" the objects so that the parent->child relationships
	are reset to represent the reflect the new relationship.

2005-08-18 20:21 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m: Remove commented out code.

2005-08-17 23:26 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m: attachObject:toParent: code to handle
	addition of tab view and items.
	* Palettes/3Containers/GormTabViewAttributesInspector.m: in ok:
	code to handle attaching and detaching from the document, when items
	are added and deleted.
	* Palettes/3Containers/GormTabViewEditor.m: Streamlined code in
	delegate.
	Corrects bug#14004.
	
2005-08-12 01:23 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m: Correction for crash when loading
	.gorm files via [NSApplication openFile:...].

2005-08-11 23:00 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormInspectorsManager.m: Removed explicit check for table
	or text view.
	* GormCore/GormScrollViewAttributesInspector.m: removed explicit 
	check for table or text view.
	* Palettes/3Containers/inspectors.m: Added editorClassName
	* Palettes/4Data/GNUmakefile: Added new files.
	* Palettes/4Data/GormImageViewAttributesInspector.m: Pulled out
	IBObjectAdditions category
	* Palettes/4Data/GormTextViewAttributesInspector.[hm]: Change class
	name to GormTextViewAttributesInspector.
	* Palettes/4Data/GormNumberFormatterAttributesInspector.m: Split
	* Palettes/4Data/GormDateFormatterAttributesInspector.m: Split
	* Palettes/4Data/GormTextViewEditor.m: Split
	* Palettes/4Data/inspectors.m: Moved all IBObjectAdditions categories
	here.
